<resources>
    <string name="app_name">Le_Ma</string>
    <string name="action_share">Share</string>
    <string name="my_device">My Device</string>
    <string-array name="continents">
        <item>Africa</item>
        <item>America</item>
        <item>Asia</item>
        <item>Europe</item>
        <item>Oceania</item>
        <item>Polar</item>
    </string-array>
    <string name="simple_country">Country</string>
    <string name="country">Country: </string>
    <string name="capital">Capital: </string>
    <string name="region">Region: </string>
    <string name="population">Population: </string>
    <string name="area">Area: </string>
    <string name="borders">Bordering countries: </string>

    <string name="manufacturer">Manufacturer: </string>
    <string name="model">Model: </string>
    <string name="version">Version: </string>
    <string name="version_release">Version Release: </string>
    <string name="serial">Serial Number: </string>
    <string name="km2">km2</string>
</resources>
